# Marchenko-Pastur-v0

./: README.md  pyproject.toml
data/: test.csv  train.csv
notebooks/: Aplication-MP.ipynb  Matchenko-Pastur.ipynb  Template.ipynb  data.csv  marchenlo-pastur-test0.py  notebook-test-script.ipynb  scriptv01.py  teorema-boostraping-ej.md  teorema-ej.md  teorema.md
