[tool.poetry]
name = "marchenko-pastur-v0"
version = "0.1.0"
description = ""
authors = ["aestrad7 <andresf.estrada.10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1.post1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

description = "Use the xxx theorem to real causality in PCA"
